--- a/public/assets/pug/components/table/all-project-table.pug
+++ b/public/assets/pug/components/table/all-project-table.pug
@@ -99,11 +99,11 @@ table(class='order-table project-table w-100')
                             div(class="project-comment-icon")
                               div(class="project-link")
                                 svg
-                                  use(href="../assets/svg/icon-sprite.svg#messages-2")
+                                  use(href="../public/assets/svg/icon-sprite.svg#messages-2")
                                 span(class="f-w-500 f-light f-12") 20
                               div(class="project-link")
                                 svg
-                                  use(href="../assets/svg/icon-sprite.svg#paperclip")
+                                  use(href="../public/assets/svg/icon-sprite.svg#paperclip")
                                 span(class="f-w-500 f-light f-12") 7
                 td
                     div(class="product-sub")
