--- a/public/assets/pug/mixin/element-user-alerts.pug
+++ b/public/assets/pug/mixin/element-user-alerts.pug
@@ -31,4 +31,4 @@ mixin user-alerts(data)
                         span(class="f-light f-w-500 f-12")=item.subTitle
                     div 
                         svg
-                            use(href="../assets/svg/icon-sprite.svg#more-vertical")
+                            use(href="../public/assets/svg/icon-sprite.svg#more-vertical")
