--- a/public/assets/pug/mixin/element-user-message.pug
+++ b/public/assets/pug/mixin/element-user-message.pug
@@ -84,7 +84,7 @@ mixin  user-message(data)
                         .dropdown
                           div(id=item.id data-bs-toggle='dropdown', aria-expanded='false' role="menu")
                             svg(class="invoice-icon")
-                                use(href="../assets/svg/icon-sprite.svg#more-vertical")
+                                use(href="../public/assets/svg/icon-sprite.svg#more-vertical")
                           .dropdown-menu.dropdown-menu-end(aria-labelledby=`${item.id}`)
                             span.dropdown-item Last Month
                             span.dropdown-item Last Week
