--- a/public/assets/pug/pages/template/add-products.pug
+++ b/public/assets/pug/pages/template/add-products.pug
@@ -60,7 +60,7 @@ html(lang='en')
                                   .nav-rounded
                                     .product-icons
                                       svg.stroke-icon
-                                        use(href="../assets/svg/icon-sprite.svg#product-detail")
+                                        use(href="../public/assets/svg/icon-sprite.svg#product-detail")
                                   .product-tab-content
                                     h6 Add Product Details
                                     p Add Product name & details
@@ -69,7 +69,7 @@ html(lang='en')
                                   .nav-rounded
                                     .product-icons
                                       svg.stroke-icon
-                                        use(href="../assets/svg/icon-sprite.svg#product-gallery")
+                                        use(href="../public/assets/svg/icon-sprite.svg#product-gallery")
                                   .product-tab-content
                                     h6 Product gallery
                                     p thumbnail & Add Product Gallery
@@ -78,7 +78,7 @@ html(lang='en')
                                   .nav-rounded
                                     .product-icons
                                       svg.stroke-icon
-                                        use(href="../assets/svg/icon-sprite.svg#product-category")
+                                        use(href="../public/assets/svg/icon-sprite.svg#product-category")
                                   .product-tab-content
                                     h6 Product Categories
                                     p Add Product category, Status and Tags
@@ -87,7 +87,7 @@ html(lang='en')
                                   .nav-rounded
                                     .product-icons
                                       svg.stroke-icon
-                                        use(href="../assets/svg/icon-sprite.svg#pricing") 
+                                        use(href="../public/assets/svg/icon-sprite.svg#pricing") 
                                   .product-tab-content
                                     h6 Selling prices
                                     p Add Product basic price & Discount
@@ -96,7 +96,7 @@ html(lang='en')
                                   .nav-rounded
                                     .product-icons
                                       svg.stroke-icon
-                                        use(href="../assets/svg/icon-sprite.svg#advance") 
+                                        use(href="../public/assets/svg/icon-sprite.svg#advance") 
                                   .product-tab-content
                                     h6 Advance
                                     p Add Meta details & Inventory details
@@ -140,7 +140,7 @@ html(lang='en')
                                     .d-flex.align-items-center.gap-sm-2.gap-1
                                         | Next
                                         svg
-                                          use(href="../assets/svg/icon-sprite.svg#front-arrow")   
+                                          use(href="../public/assets/svg/icon-sprite.svg#front-arrow")   
                             #gallery-product.tab-pane.fade(role='tabpanel' aria-labelledby='gallery-product-tab')
                               .sidebar-body
                                 .product-upload
@@ -148,7 +148,7 @@ html(lang='en')
                                   form#multiFileUploadA.dropzone.dropzone-light(action='/upload.php')
                                     .dz-message.needsclick
                                       svg
-                                        use(href="../assets/svg/icon-sprite.svg#file-upload")
+                                        use(href="../public/assets/svg/icon-sprite.svg#file-upload")
                                       h6 Drag your image here, or 
                                         a.txt-primary(href="#!") browser
                                       span.note.needsclick
@@ -158,7 +158,7 @@ html(lang='en')
                                   form#multiFileUploadB.dropzone.dropzone-light(action='/upload.php')
                                     .dz-message.needsclick
                                       svg
-                                        use(href="../assets/svg/icon-sprite.svg#file-upload1")
+                                        use(href="../public/assets/svg/icon-sprite.svg#file-upload1")
                                       h6 Drag files here
                                       span.note.needsclick
                                         | Add Product Gallery Images
@@ -166,13 +166,13 @@ html(lang='en')
                                   .btn
                                     .d-flex.align-items-center.gap-sm-2.gap-1
                                       svg
-                                        use(href="../assets/svg/icon-sprite.svg#back-arrow")
+                                        use(href="../public/assets/svg/icon-sprite.svg#back-arrow")
                                       | Previous
                                   .btn
                                     .d-flex.align-items-center.gap-sm-2.gap-1
                                         | Next
                                         svg
-                                          use(href="../assets/svg/icon-sprite.svg#front-arrow")      
+                                          use(href="../public/assets/svg/icon-sprite.svg#front-arrow")      
                             #category-product.tab-pane.fade(role='tabpanel' aria-labelledby='category-product-tab')
                               .sidebar-body
                                 form
@@ -261,13 +261,13 @@ html(lang='en')
                                     .btn
                                       .d-flex.align-items-center.gap-sm-2.gap-1
                                         svg
-                                          use(href="../assets/svg/icon-sprite.svg#back-arrow")
+                                          use(href="../public/assets/svg/icon-sprite.svg#back-arrow")
                                         | Previous
                                     .btn
                                       .d-flex.align-items-center.gap-sm-2.gap-1
                                           | Next
                                           svg
-                                            use(href="../assets/svg/icon-sprite.svg#front-arrow")
+                                            use(href="../public/assets/svg/icon-sprite.svg#front-arrow")
                             #pricings.tab-pane.fade(role='tabpanel' aria-labelledby='pricings-tab')
                               .sidebar-body
                                 form.price-wrapper
@@ -322,13 +322,13 @@ html(lang='en')
                                       .btn
                                         .d-flex.align-items-center.gap-sm-2.gap-1
                                           svg
-                                            use(href="../assets/svg/icon-sprite.svg#back-arrow")
+                                            use(href="../public/assets/svg/icon-sprite.svg#back-arrow")
                                           | Previous
                                       .btn
                                         .d-flex.align-items-center.gap-sm-2.gap-1
                                             | Next
                                             svg
-                                              use(href="../assets/svg/icon-sprite.svg#front-arrow")    
+                                              use(href="../public/assets/svg/icon-sprite.svg#front-arrow")    
                             #advance-product.tab-pane.fade(role='tabpanel' aria-labelledby='advance-product-tab')
                               .sidebar-body.advance-options
                                 ul#advance-option-tab.nav.nav-tabs.border-tab.mb-0(role='tablist')
@@ -388,13 +388,13 @@ html(lang='en')
                                             .btn 
                                               .d-flex.align-items-center.gap-sm-2.gap-1
                                                 svg
-                                                  use(href="../assets/svg/icon-sprite.svg#back-arrow")
+                                                  use(href="../public/assets/svg/icon-sprite.svg#back-arrow")
                                                 | Previous
                                             .btn
                                               .d-flex.align-items-center.gap-sm-2.gap-1
                                                   | Next
                                                   svg
-                                                    use(href="../assets/svg/icon-sprite.svg#front-arrow")
+                                                    use(href="../public/assets/svg/icon-sprite.svg#front-arrow")
                                   #additional-option.tab-pane.fade(role='tabpanel' aria-labelledby='additional-option-tab')
                                     .meta-body
                                       form
@@ -441,13 +441,13 @@ html(lang='en')
                                             .btn
                                               .d-flex.align-items-center.gap-sm-2.gap-1
                                                 svg
-                                                  use(href="../assets/svg/icon-sprite.svg#back-arrow")
+                                                  use(href="../public/assets/svg/icon-sprite.svg#back-arrow")
                                                 | Previous
                                             .btn
                                               .d-flex.align-items-center.gap-sm-2.gap-1
                                                   | Next
                                                   svg
-                                                    use(href="../assets/svg/icon-sprite.svg#front-arrow")
+                                                    use(href="../public/assets/svg/icon-sprite.svg#front-arrow")
                                   #dropping-option.tab-pane.fade(role='tabpanel' aria-labelledby='dropping-option-tab')
                                     .meta-body
                                       form
@@ -505,13 +505,13 @@ html(lang='en')
                                             .btn
                                               .d-flex.align-items-center.gap-sm-2.gap-1
                                                 svg
-                                                  use(href="../assets/svg/icon-sprite.svg#back-arrow")
+                                                  use(href="../public/assets/svg/icon-sprite.svg#back-arrow")
                                                 | Previous 
                                             .btn
                                               .d-flex.align-items-center.gap-sm-2.gap-1
                                                   | Submit
                                                   svg
-                                                    use(href="../assets/svg/icon-sprite.svg#front-arrow")
+                                                    use(href="../public/assets/svg/icon-sprite.svg#front-arrow")
           // Container-fluid Ends
         include ../../components/footer
     include ../../components/footer-files
