--- a/public/assets/pug/pages/template/category.pug
+++ b/public/assets/pug/pages/template/category.pug
@@ -127,9 +127,9 @@ html(lang='en')
                             td 
                               .product-action
                                 svg     
-                                  use(href="../assets/svg/icon-sprite.svg#edit-content")
+                                  use(href="../public/assets/svg/icon-sprite.svg#edit-content")
                                 svg
-                                  use(href="../assets/svg/icon-sprite.svg#trash1") 
+                                  use(href="../public/assets/svg/icon-sprite.svg#trash1") 
                           tr.product-removes
                             td
                               .form-check 
@@ -146,9 +146,9 @@ html(lang='en')
                             td 
                               .product-action
                                 svg     
-                                  use(href="../assets/svg/icon-sprite.svg#edit-content")
+                                  use(href="../public/assets/svg/icon-sprite.svg#edit-content")
                                 svg
-                                  use(href="../assets/svg/icon-sprite.svg#trash1")
+                                  use(href="../public/assets/svg/icon-sprite.svg#trash1")
                           tr.product-removes
                             td
                               .form-check 
@@ -165,9 +165,9 @@ html(lang='en')
                             td 
                               .product-action
                                 svg     
-                                  use(href="../assets/svg/icon-sprite.svg#edit-content")
+                                  use(href="../public/assets/svg/icon-sprite.svg#edit-content")
                                 svg
-                                  use(href="../assets/svg/icon-sprite.svg#trash1")
+                                  use(href="../public/assets/svg/icon-sprite.svg#trash1")
                           tr.product-removes
                             td
                               .form-check 
@@ -184,9 +184,9 @@ html(lang='en')
                             td 
                               .product-action
                                 svg     
-                                  use(href="../assets/svg/icon-sprite.svg#edit-content")
+                                  use(href="../public/assets/svg/icon-sprite.svg#edit-content")
                                 svg
-                                  use(href="../assets/svg/icon-sprite.svg#trash1")
+                                  use(href="../public/assets/svg/icon-sprite.svg#trash1")
                           tr.product-removes
                             td
                               .form-check 
@@ -203,9 +203,9 @@ html(lang='en')
                             td 
                               .product-action
                                 svg     
-                                  use(href="../assets/svg/icon-sprite.svg#edit-content")
+                                  use(href="../public/assets/svg/icon-sprite.svg#edit-content")
                                 svg
-                                  use(href="../assets/svg/icon-sprite.svg#trash1")
+                                  use(href="../public/assets/svg/icon-sprite.svg#trash1")
                           tr.product-removes
                             td
                               .form-check 
@@ -222,9 +222,9 @@ html(lang='en')
                             td 
                               .product-action
                                 svg     
-                                  use(href="../assets/svg/icon-sprite.svg#edit-content")
+                                  use(href="../public/assets/svg/icon-sprite.svg#edit-content")
                                 svg
-                                  use(href="../assets/svg/icon-sprite.svg#trash1")
+                                  use(href="../public/assets/svg/icon-sprite.svg#trash1")
                           tr.product-removes
                             td
                               .form-check 
@@ -241,9 +241,9 @@ html(lang='en')
                             td 
                               .product-action
                                 svg     
-                                  use(href="../assets/svg/icon-sprite.svg#edit-content")
+                                  use(href="../public/assets/svg/icon-sprite.svg#edit-content")
                                 svg
-                                  use(href="../assets/svg/icon-sprite.svg#trash1")
+                                  use(href="../public/assets/svg/icon-sprite.svg#trash1")
                           tr.product-removes
                             td
                               .form-check 
@@ -260,9 +260,9 @@ html(lang='en')
                             td 
                               .product-action
                                 svg     
-                                  use(href="../assets/svg/icon-sprite.svg#edit-content")
+                                  use(href="../public/assets/svg/icon-sprite.svg#edit-content")
                                 svg
-                                  use(href="../assets/svg/icon-sprite.svg#trash1")
+                                  use(href="../public/assets/svg/icon-sprite.svg#trash1")
                           tr.product-removes
                             td
                               .form-check 
@@ -279,9 +279,9 @@ html(lang='en')
                             td 
                               .product-action
                                 svg     
-                                  use(href="../assets/svg/icon-sprite.svg#edit-content")
+                                  use(href="../public/assets/svg/icon-sprite.svg#edit-content")
                                 svg
-                                  use(href="../assets/svg/icon-sprite.svg#trash1")
+                                  use(href="../public/assets/svg/icon-sprite.svg#trash1")
                           tr.product-removes
                             td
                               .form-check 
@@ -298,9 +298,9 @@ html(lang='en')
                             td 
                               .product-action
                                 svg     
-                                  use(href="../assets/svg/icon-sprite.svg#edit-content")
+                                  use(href="../public/assets/svg/icon-sprite.svg#edit-content")
                                 svg
-                                  use(href="../assets/svg/icon-sprite.svg#trash1")
+                                  use(href="../public/assets/svg/icon-sprite.svg#trash1")
                           tr.product-removes
                             td
                               .form-check 
@@ -317,9 +317,9 @@ html(lang='en')
                             td 
                               .product-action
                                 svg     
-                                  use(href="../assets/svg/icon-sprite.svg#edit-content")
+                                  use(href="../public/assets/svg/icon-sprite.svg#edit-content")
                                 svg
-                                  use(href="../assets/svg/icon-sprite.svg#trash1")
+                                  use(href="../public/assets/svg/icon-sprite.svg#trash1")
 
 
                           tr.product-removes
@@ -338,9 +338,9 @@ html(lang='en')
                             td 
                               .product-action
                                 svg     
-                                  use(href="../assets/svg/icon-sprite.svg#edit-content")
+                                  use(href="../public/assets/svg/icon-sprite.svg#edit-content")
                                 svg
-                                  use(href="../assets/svg/icon-sprite.svg#trash1")
+                                  use(href="../public/assets/svg/icon-sprite.svg#trash1")
                           tr.product-removes
                             td
                               .form-check 
@@ -357,9 +357,9 @@ html(lang='en')
                             td 
                               .product-action
                                 svg     
-                                  use(href="../assets/svg/icon-sprite.svg#edit-content")
+                                  use(href="../public/assets/svg/icon-sprite.svg#edit-content")
                                 svg
-                                  use(href="../assets/svg/icon-sprite.svg#trash1")
+                                  use(href="../public/assets/svg/icon-sprite.svg#trash1")
                           tr.product-removes
                             td
                               .form-check 
@@ -376,9 +376,9 @@ html(lang='en')
                             td 
                               .product-action
                                 svg     
-                                  use(href="../assets/svg/icon-sprite.svg#edit-content")
+                                  use(href="../public/assets/svg/icon-sprite.svg#edit-content")
                                 svg
-                                  use(href="../assets/svg/icon-sprite.svg#trash1")
+                                  use(href="../public/assets/svg/icon-sprite.svg#trash1")
                           tr.product-removes
                             td
                               .form-check 
@@ -395,9 +395,9 @@ html(lang='en')
                             td 
                               .product-action
                                 svg     
-                                  use(href="../assets/svg/icon-sprite.svg#edit-content")
+                                  use(href="../public/assets/svg/icon-sprite.svg#edit-content")
                                 svg
-                                  use(href="../assets/svg/icon-sprite.svg#trash1")
+                                  use(href="../public/assets/svg/icon-sprite.svg#trash1")
                           tr.product-removes
                             td
                               .form-check 
@@ -414,9 +414,9 @@ html(lang='en')
                             td 
                               .product-action
                                 svg     
-                                  use(href="../assets/svg/icon-sprite.svg#edit-content")
+                                  use(href="../public/assets/svg/icon-sprite.svg#edit-content")
                                 svg
-                                  use(href="../assets/svg/icon-sprite.svg#trash1")
+                                  use(href="../public/assets/svg/icon-sprite.svg#trash1")
                           tr.product-removes
                             td
                               .form-check 
@@ -433,9 +433,9 @@ html(lang='en')
                             td 
                               .product-action
                                 svg     
-                                  use(href="../assets/svg/icon-sprite.svg#edit-content")
+                                  use(href="../public/assets/svg/icon-sprite.svg#edit-content")
                                 svg
-                                  use(href="../assets/svg/icon-sprite.svg#trash1")
+                                  use(href="../public/assets/svg/icon-sprite.svg#trash1")
                           tr.product-removes
                             td
                               .form-check 
@@ -452,9 +452,9 @@ html(lang='en')
                             td 
                               .product-action
                                 svg     
-                                  use(href="../assets/svg/icon-sprite.svg#edit-content")
+                                  use(href="../public/assets/svg/icon-sprite.svg#edit-content")
                                 svg
-                                  use(href="../assets/svg/icon-sprite.svg#trash1")
+                                  use(href="../public/assets/svg/icon-sprite.svg#trash1")
                           tr.product-removes
                             td
                               .form-check 
@@ -471,9 +471,9 @@ html(lang='en')
                             td 
                               .product-action
                                 svg     
-                                  use(href="../assets/svg/icon-sprite.svg#edit-content")
+                                  use(href="../public/assets/svg/icon-sprite.svg#edit-content")
                                 svg
-                                  use(href="../assets/svg/icon-sprite.svg#trash1")
+                                  use(href="../public/assets/svg/icon-sprite.svg#trash1")
                           
 
           // Container-fluid Ends
