--- a/public/assets/pug/pages/template/dashboard-02.pug
+++ b/public/assets/pug/pages/template/dashboard-02.pug
@@ -193,13 +193,13 @@ html(lang='en')
                           div(class="add-product")
                             div(class='product-icon bg-light-primary')
                               svg 
-                                use(href="../assets/svg/icon-sprite.svg#box-add")
+                                use(href="../public/assets/svg/icon-sprite.svg#box-add")
                             div 
                               h6.mb-1 Add New Product
                               span.f-light Images are crucial showcasing
                           div(class='product-icon')
                             svg
-                              use(href="../assets/svg/icon-sprite.svg#arrow-down")
+                              use(href="../public/assets/svg/icon-sprite.svg#arrow-down")
                 .col-xl-12 
                   .card(class="product-widget") 
                     .card-body(class="new-product")  
@@ -207,13 +207,13 @@ html(lang='en')
                           div(class="add-product")
                             div(class='product-icon bg-light-primary')
                               svg 
-                                use(href="../assets/svg/icon-sprite.svg#receipt-disscount")
+                                use(href="../public/assets/svg/icon-sprite.svg#receipt-disscount")
                             div
                               h6.mb-1 Add Disscount  
                               span.f-light The product images to the platform
                           div(class='product-icon')  
                             svg 
-                              use(href="../assets/svg/icon-sprite.svg#arrow-down")
+                              use(href="../public/assets/svg/icon-sprite.svg#arrow-down")
 
           // Container-fluid Ends 
         include ../../components/footer
