--- a/public/assets/pug/pages/template/dashboard-03.pug
+++ b/public/assets/pug/pages/template/dashboard-03.pug
@@ -61,7 +61,7 @@ html(lang='en')
                             span(class="f-12 f-w-400") (This month)
                           div(class="product-sub bg-primary-light")
                             svg(class="invoice-icon")
-                              use(href="../assets/svg/icon-sprite.svg#color-swatch")
+                              use(href="../public/assets/svg/icon-sprite.svg#color-swatch")
                         ul.bubbles
                           li.bubble
                           li.bubble
@@ -82,7 +82,7 @@ html(lang='en')
                             span(class="f-12 f-w-400") (This month) 
                           div(class="product-sub bg-warning-light") 
                             svg(class="invoice-icon")
-                              use(href="../assets/svg/icon-sprite.svg#tick-circle")
+                              use(href="../public/assets/svg/icon-sprite.svg#tick-circle")
                         ul.bubbles
                           li.bubble
                           li.bubble
@@ -103,7 +103,7 @@ html(lang='en')
                             span(class="f-12 f-w-400") (This month) 
                           div(class="product-sub bg-secondary-light") 
                             svg(class="invoice-icon")
-                              use(href="../assets/svg/icon-sprite.svg#add-square")
+                              use(href="../public/assets/svg/icon-sprite.svg#add-square")
                         ul.bubbles 
                           li.bubble 
                           li.bubble
@@ -124,7 +124,7 @@ html(lang='en')
                             span(class="f-12 f-w-400") (This month) 
                           div(class="product-sub bg-light-light") 
                             svg(class="invoice-icon")
-                              use(href="../assets/svg/icon-sprite.svg#edit-2")
+                              use(href="../public/assets/svg/icon-sprite.svg#edit-2")
                         ul.bubbles 
                           li.bubble 
                           li.bubble
@@ -201,11 +201,11 @@ html(lang='en')
                               div(class="project-comment-icon")
                                 div(class="project-link") 
                                   svg      
-                                    use(href="../assets/svg/icon-sprite.svg#messages-2")
+                                    use(href="../public/assets/svg/icon-sprite.svg#messages-2")
                                   span 18 
                                 div(class="project-link") 
                                   svg  
-                                    use(href="../assets/svg/icon-sprite.svg#paperclip")
+                                    use(href="../public/assets/svg/icon-sprite.svg#paperclip")
                                   span 2  
                             div(class="project-meeting-details")
                               div(class="project-meeting")
@@ -250,11 +250,11 @@ html(lang='en')
                               div(class="project-comment-icon")
                                 div(class="project-link") 
                                   svg 
-                                    use(href="../assets/svg/icon-sprite.svg#messages-2")
+                                    use(href="../public/assets/svg/icon-sprite.svg#messages-2")
                                   span 18
                                 div(class="project-link")
                                   svg  
-                                    use(href="../assets/svg/icon-sprite.svg#paperclip")
+                                    use(href="../public/assets/svg/icon-sprite.svg#paperclip")
                                   span 2 
                             div(class="project-meeting-details") 
                               div(class="project-meeting") 
@@ -299,11 +299,11 @@ html(lang='en')
                               div(class="project-comment-icon")
                                 div(class="project-link")
                                   svg 
-                                    use(href="../assets/svg/icon-sprite.svg#messages-2")
+                                    use(href="../public/assets/svg/icon-sprite.svg#messages-2")
                                   span(class="f-light f-12 f-w-500") 20
                                 div(class="project-link")
                                   svg 
-                                    use(href="../assets/svg/icon-sprite.svg#paperclip")
+                                    use(href="../public/assets/svg/icon-sprite.svg#paperclip")
                                   span(class="f-light f-12 f-w-500") 7
                             div(class="project-meeting-details")
                               div(class="project-meeting") 
@@ -347,7 +347,7 @@ html(lang='en')
                                       span(class="d-block f-light f-w-500") +84 342 556 555 
                                     div(class="product-sub")
                                       svg(class="invoice-icon")
-                                          use(href="../assets/svg/icon-sprite.svg#messages-3")
+                                          use(href="../public/assets/svg/icon-sprite.svg#messages-3")
                               tr  
                                 td(class="client-list")
                                   div(class="user-id")
@@ -364,7 +364,7 @@ html(lang='en')
                                       span(class="d-block f-light f-w-500") +77 445 551 629
                                     div(class="product-sub")
                                       svg(class="invoice-icon")
-                                          use(href="../assets/svg/icon-sprite.svg#messages-3")
+                                          use(href="../public/assets/svg/icon-sprite.svg#messages-3")
                               tr
                                 td(class="client-list")
                                   div(class="user-id")
@@ -381,7 +381,7 @@ html(lang='en')
                                       span(class="d-block f-light f-w-500") +56 955 510 831
                                     div(class="product-sub") 
                                       svg(class="invoice-icon")
-                                          use(href="../assets/svg/icon-sprite.svg#messages-3")
+                                          use(href="../public/assets/svg/icon-sprite.svg#messages-3")
                               tr
                                 td(class="client-list") 
                                   div(class="user-id")
@@ -397,7 +397,7 @@ html(lang='en')
                                       span(class="d-block f-light f-w-500") +56 955 570 095
                                     div(class="product-sub")
                                       svg(class="invoice-icon")
-                                          use(href="../assets/svg/icon-sprite.svg#messages-3") 
+                                          use(href="../public/assets/svg/icon-sprite.svg#messages-3") 
                               tr
                                 td(class="client-list")
                                   div(class="user-id")
@@ -413,7 +413,7 @@ html(lang='en')
                                       span(class="d-block f-light f-w-500") +226 795 552 31
                                     div(class="product-sub")
                                       svg(class="invoice-icon")
-                                          use(href="../assets/svg/icon-sprite.svg#messages-3")
+                                          use(href="../public/assets/svg/icon-sprite.svg#messages-3")
                   .col-xl-7.box-col-6
                     .card 
                       .card-header.card-no-border.total-revenue 
