--- a/public/assets/pug/pages/template/general-widget.pug
+++ b/public/assets/pug/pages/template/general-widget.pug
@@ -54,7 +54,7 @@ html(lang='en')
                             span(class="f-12 f-w-400") (This month)
                           div(class="product-sub bg-primary-light") 
                             svg(class="invoice-icon")
-                              use(href="../assets/svg/icon-sprite.svg#color-swatch")
+                              use(href="../public/assets/svg/icon-sprite.svg#color-swatch")
                         ul.bubbles
                           li.bubble
                           li.bubble
@@ -75,7 +75,7 @@ html(lang='en')
                             span(class="f-12 f-w-400") (This month) 
                           div(class="product-sub bg-warning-light") 
                             svg(class="invoice-icon")
-                              use(href="../assets/svg/icon-sprite.svg#tick-circle")
+                              use(href="../public/assets/svg/icon-sprite.svg#tick-circle")
                         ul.bubbles 
                           li.bubble
                           li.bubble 
@@ -96,7 +96,7 @@ html(lang='en')
                             span(class="f-12 f-w-400") (This month) 
                           div(class="product-sub bg-secondary-light") 
                             svg(class="invoice-icon")
-                              use(href="../assets/svg/icon-sprite.svg#add-square")
+                              use(href="../public/assets/svg/icon-sprite.svg#add-square")
                         ul.bubbles 
                           li.bubble 
                           li.bubble
@@ -117,7 +117,7 @@ html(lang='en')
                             span(class="f-12 f-w-400") (This month) 
                           div(class="product-sub bg-light-light") 
                             svg(class="invoice-icon")
-                              use(href="../assets/svg/icon-sprite.svg#edit-2")
+                              use(href="../public/assets/svg/icon-sprite.svg#edit-2")
                         ul.bubbles 
                           li.bubble 
                           li.bubble
@@ -166,7 +166,7 @@ html(lang='en')
                             h4 Deliveries
                             div(class="icon-menu-header")
                               svg
-                                use(href="../assets/svg/icon-sprite.svg#more-horizontal")
+                                use(href="../public/assets/svg/icon-sprite.svg#more-horizontal")
                           .card-body.pt-0
                             div(class="table-responsive custom-scrollbar deliveries-percentage")
                               table(class="percentage-data w-100")
@@ -230,11 +230,11 @@ html(lang='en')
                           div(class="add-product")
                             div(class='product-icon bg-light-primary')
                               svg
-                                use(href="../assets/svg/icon-sprite.svg#box-add")
+                                use(href="../public/assets/svg/icon-sprite.svg#box-add")
                             h6 Add New Product
                           div(class='product-icon')
                             svg
-                              use(href="../assets/svg/icon-sprite.svg#arrow-down")
+                              use(href="../public/assets/svg/icon-sprite.svg#arrow-down")
                 .col-xl-12 
                   .card
                     .card-body(class="new-product")
@@ -242,11 +242,11 @@ html(lang='en')
                           div(class="add-product")
                             div(class='product-icon bg-light-primary')
                               svg
-                                use(href="../assets/svg/icon-sprite.svg#receipt-disscount")
+                                use(href="../public/assets/svg/icon-sprite.svg#receipt-disscount")
                             h6 Add Disscount 
                           div(class='product-icon')
                             svg  
-                              use(href="../assets/svg/icon-sprite.svg#arrow-down") 
+                              use(href="../public/assets/svg/icon-sprite.svg#arrow-down") 
                 .col-xl-12 
                     .row
                       .col-xl-12.col-md-6
