--- a/public/assets/pug/pages/template/index.pug
+++ b/public/assets/pug/pages/template/index.pug
@@ -115,7 +115,7 @@ html(lang='en')
                         h4 Deliveries
                         div(class="icon-menu-header")
                           svg
-                            use(href="../assets/svg/icon-sprite.svg#more-horizontal")
+                            use(href="../public/assets/svg/icon-sprite.svg#more-horizontal")
                       .card-body.pt-0
                         div(class="table-responsive custom-scrollbar deliveries-percentage")
                           table(class="percentage-data w-100")
