--- a/public/assets/pug/pages/template/invoice-5.pug
+++ b/public/assets/pug/pages/template/invoice-5.pug
@@ -61,15 +61,15 @@ html(lang='en')
                               ul(style="list-style: none; display: flex; align-items: center; background: linear-gradient(291deg,  #006666 21.2%, #006666 83.92%); padding: 31px 80px; border-bottom-left-radius: 100px; gap:28px;")
                                   li  
                                       svg.stroke-icon(style="height:14px; width: 14px; fill:#fff; margin-right: 10px;")
-                                          use(href="../assets/svg/icon-sprite.svg#call")
+                                          use(href="../public/assets/svg/icon-sprite.svg#call")
                                       span(style="color: #FFFFFF; font-weight: 500; font-size: 16px;") (239) 555-0108
                                   li(style="border-left: 1px solid rgba(255, 255, 255, 0.3); border-right: 1px solid rgba(255, 255, 255, 0.3); padding: 0 22px;")
                                       svg.stroke-icon(style="height:16px; width: 16px; fill:#fff; margin-right: 10px;") 
-                                          use(href="../assets/svg/icon-sprite.svg#email-box")
+                                          use(href="../public/assets/svg/icon-sprite.svg#email-box")
                                       span(style="color: #FFFFFF; font-weight: 500; font-size: 16px;") Riho@themesforest.com
                                   li 
                                       svg.stroke-icon(style="height:16px; width: 16px; fill:#fff; margin-right: 10px;") 
-                                          use(href="../assets/svg/icon-sprite.svg#web")
+                                          use(href="../public/assets/svg/icon-sprite.svg#web")
                                       span(style="color: #FFFFFF; font-weight: 500; font-size: 16px;") Website: www.Rihothemes.com
                       tr(style="display: flex; justify-content: space-between;")
                           td 
