--- a/public/assets/pug/pages/template/landing-page.pug
+++ b/public/assets/pug/pages/template/landing-page.pug
@@ -79,7 +79,7 @@ html(lang='en')
                       span HTML Template
                   div.arrow-animate
                     svg
-                      use(href="../assets/svg/icon-sprite.svg#animated-arrow") 
+                      use(href="../public/assets/svg/icon-sprite.svg#animated-arrow") 
               div.user-content 
                 span.text-center The incredible and user-friendly HTML was created using flexible, contemporary, and strong unique parts.
               div.star-animate 
