--- a/public/assets/pug/pages/template/list-products.pug
+++ b/public/assets/pug/pages/template/list-products.pug
@@ -150,9 +150,9 @@ html(lang='en')
                               .product-action
                                 a(href="add-products.html") 
                                   svg     
-                                    use(href="../assets/svg/icon-sprite.svg#edit-content")
+                                    use(href="../public/assets/svg/icon-sprite.svg#edit-content")
                                 svg
-                                  use(href="../assets/svg/icon-sprite.svg#trash1")
+                                  use(href="../public/assets/svg/icon-sprite.svg#trash1")
                           tr.product-removes
                             td
                               .form-check 
@@ -183,9 +183,9 @@ html(lang='en')
                               .product-action
                                 a(href="add-products.html") 
                                   svg     
-                                    use(href="../assets/svg/icon-sprite.svg#edit-content")
+                                    use(href="../public/assets/svg/icon-sprite.svg#edit-content")
                                 svg
-                                  use(href="../assets/svg/icon-sprite.svg#trash1")
+                                  use(href="../public/assets/svg/icon-sprite.svg#trash1")
                           tr.product-removes
                             td
                               .form-check 
@@ -216,9 +216,9 @@ html(lang='en')
                               .product-action
                                 a(href="add-products.html") 
                                   svg     
-                                    use(href="../assets/svg/icon-sprite.svg#edit-content")
+                                    use(href="../public/assets/svg/icon-sprite.svg#edit-content")
                                 svg
-                                  use(href="../assets/svg/icon-sprite.svg#trash1")
+                                  use(href="../public/assets/svg/icon-sprite.svg#trash1")
                           tr.product-removes
                             td
                               .form-check 
@@ -249,9 +249,9 @@ html(lang='en')
                               .product-action
                                 a(href="add-products.html") 
                                   svg     
-                                    use(href="../assets/svg/icon-sprite.svg#edit-content")
+                                    use(href="../public/assets/svg/icon-sprite.svg#edit-content")
                                 svg
-                                  use(href="../assets/svg/icon-sprite.svg#trash1")
+                                  use(href="../public/assets/svg/icon-sprite.svg#trash1")
                           tr.product-removes
                             td
                               .form-check 
@@ -282,9 +282,9 @@ html(lang='en')
                               .product-action
                                 a(href="add-products.html") 
                                   svg     
-                                    use(href="../assets/svg/icon-sprite.svg#edit-content")
+                                    use(href="../public/assets/svg/icon-sprite.svg#edit-content")
                                 svg
-                                  use(href="../assets/svg/icon-sprite.svg#trash1")
+                                  use(href="../public/assets/svg/icon-sprite.svg#trash1")
                           tr.product-removes
                             td
                               .form-check 
@@ -315,9 +315,9 @@ html(lang='en')
                               .product-action
                                 a(href="add-products.html") 
                                   svg     
-                                    use(href="../assets/svg/icon-sprite.svg#edit-content")
+                                    use(href="../public/assets/svg/icon-sprite.svg#edit-content")
                                 svg
-                                  use(href="../assets/svg/icon-sprite.svg#trash1")
+                                  use(href="../public/assets/svg/icon-sprite.svg#trash1")
                           tr.product-removes
                             td
                               .form-check 
@@ -348,9 +348,9 @@ html(lang='en')
                               .product-action
                                 a(href="add-products.html") 
                                   svg     
-                                    use(href="../assets/svg/icon-sprite.svg#edit-content")
+                                    use(href="../public/assets/svg/icon-sprite.svg#edit-content")
                                 svg
-                                  use(href="../assets/svg/icon-sprite.svg#trash1")
+                                  use(href="../public/assets/svg/icon-sprite.svg#trash1")
                           tr.product-removes
                             td
                               .form-check 
@@ -381,9 +381,9 @@ html(lang='en')
                               .product-action
                                 a(href="add-products.html") 
                                   svg     
-                                    use(href="../assets/svg/icon-sprite.svg#edit-content")
+                                    use(href="../public/assets/svg/icon-sprite.svg#edit-content")
                                 svg
-                                  use(href="../assets/svg/icon-sprite.svg#trash1")
+                                  use(href="../public/assets/svg/icon-sprite.svg#trash1")
                           tr.product-removes
                             td
                               .form-check 
@@ -414,9 +414,9 @@ html(lang='en')
                               .product-action
                                 a(href="add-products.html") 
                                   svg     
-                                    use(href="../assets/svg/icon-sprite.svg#edit-content")
+                                    use(href="../public/assets/svg/icon-sprite.svg#edit-content")
                                 svg
-                                  use(href="../assets/svg/icon-sprite.svg#trash1")
+                                  use(href="../public/assets/svg/icon-sprite.svg#trash1")
                           tr.product-removes
                             td
                               .form-check 
@@ -447,9 +447,9 @@ html(lang='en')
                               .product-action
                                 a(href="add-products.html") 
                                   svg     
-                                    use(href="../assets/svg/icon-sprite.svg#edit-content")
+                                    use(href="../public/assets/svg/icon-sprite.svg#edit-content")
                                 svg
-                                  use(href="../assets/svg/icon-sprite.svg#trash1")
+                                  use(href="../public/assets/svg/icon-sprite.svg#trash1")
                           tr.product-removes
                             td
                               .form-check 
@@ -480,9 +480,9 @@ html(lang='en')
                               .product-action
                                 a(href="add-products.html") 
                                   svg     
-                                    use(href="../assets/svg/icon-sprite.svg#edit-content")
+                                    use(href="../public/assets/svg/icon-sprite.svg#edit-content")
                                 svg
-                                  use(href="../assets/svg/icon-sprite.svg#trash1")
+                                  use(href="../public/assets/svg/icon-sprite.svg#trash1")
                           tr.product-removes
                             td
                               .form-check 
@@ -513,9 +513,9 @@ html(lang='en')
                               .product-action
                                 a(href="add-products.html") 
                                   svg     
-                                    use(href="../assets/svg/icon-sprite.svg#edit-content")
+                                    use(href="../public/assets/svg/icon-sprite.svg#edit-content")
                                 svg
-                                  use(href="../assets/svg/icon-sprite.svg#trash1")
+                                  use(href="../public/assets/svg/icon-sprite.svg#trash1")
                           tr.product-removes
                             td
                               .form-check 
@@ -546,9 +546,9 @@ html(lang='en')
                               .product-action
                                 a(href="add-products.html") 
                                   svg     
-                                    use(href="../assets/svg/icon-sprite.svg#edit-content")
+                                    use(href="../public/assets/svg/icon-sprite.svg#edit-content")
                                 svg
-                                  use(href="../assets/svg/icon-sprite.svg#trash1")
+                                  use(href="../public/assets/svg/icon-sprite.svg#trash1")
                           tr.product-removes
                             td
                               .form-check 
@@ -579,9 +579,9 @@ html(lang='en')
                               .product-action
                                 a(href="add-products.html") 
                                   svg     
-                                    use(href="../assets/svg/icon-sprite.svg#edit-content")
+                                    use(href="../public/assets/svg/icon-sprite.svg#edit-content")
                                 svg
-                                  use(href="../assets/svg/icon-sprite.svg#trash1")
+                                  use(href="../public/assets/svg/icon-sprite.svg#trash1")
                           tr.product-removes
                             td
                               .form-check 
@@ -612,9 +612,9 @@ html(lang='en')
                               .product-action
                                 a(href="add-products.html") 
                                   svg     
-                                    use(href="../assets/svg/icon-sprite.svg#edit-content")
+                                    use(href="../public/assets/svg/icon-sprite.svg#edit-content")
                                 svg
-                                  use(href="../assets/svg/icon-sprite.svg#trash1")
+                                  use(href="../public/assets/svg/icon-sprite.svg#trash1")
                           tr.product-removes
                             td
                               .form-check 
@@ -645,9 +645,9 @@ html(lang='en')
                               .product-action
                                 a(href="add-products.html") 
                                   svg     
-                                    use(href="../assets/svg/icon-sprite.svg#edit-content")
+                                    use(href="../public/assets/svg/icon-sprite.svg#edit-content")
                                 svg
-                                  use(href="../assets/svg/icon-sprite.svg#trash1")
+                                  use(href="../public/assets/svg/icon-sprite.svg#trash1")
                           tr.product-removes
                             td
                               .form-check 
@@ -678,9 +678,9 @@ html(lang='en')
                               .product-action
                                 a(href="add-products.html") 
                                   svg     
-                                    use(href="../assets/svg/icon-sprite.svg#edit-content")
+                                    use(href="../public/assets/svg/icon-sprite.svg#edit-content")
                                 svg
-                                  use(href="../assets/svg/icon-sprite.svg#trash1")
+                                  use(href="../public/assets/svg/icon-sprite.svg#trash1")
                           tr.product-removes
                             td
                               .form-check 
@@ -711,9 +711,9 @@ html(lang='en')
                               .product-action
                                 a(href="add-products.html") 
                                   svg     
-                                    use(href="../assets/svg/icon-sprite.svg#edit-content")
+                                    use(href="../public/assets/svg/icon-sprite.svg#edit-content")
                                 svg
-                                  use(href="../assets/svg/icon-sprite.svg#trash1")
+                                  use(href="../public/assets/svg/icon-sprite.svg#trash1")
                           tr.product-removes
                             td
                               .form-check 
@@ -744,9 +744,9 @@ html(lang='en')
                               .product-action
                                 a(href="add-products.html") 
                                   svg     
-                                    use(href="../assets/svg/icon-sprite.svg#edit-content")
+                                    use(href="../public/assets/svg/icon-sprite.svg#edit-content")
                                 svg
-                                  use(href="../assets/svg/icon-sprite.svg#trash1")
+                                  use(href="../public/assets/svg/icon-sprite.svg#trash1")
                           tr.product-removes
                             td
                               .form-check 
@@ -777,9 +777,9 @@ html(lang='en')
                               .product-action
                                 a(href="add-products.html") 
                                   svg     
-                                    use(href="../assets/svg/icon-sprite.svg#edit-content")
+                                    use(href="../public/assets/svg/icon-sprite.svg#edit-content")
                                 svg
-                                  use(href="../assets/svg/icon-sprite.svg#trash1")
+                                  use(href="../public/assets/svg/icon-sprite.svg#trash1")
                           tr.product-removes
                             td
                               .form-check 
@@ -810,9 +810,9 @@ html(lang='en')
                               .product-action
                                 a(href="add-products.html") 
                                   svg     
-                                    use(href="../assets/svg/icon-sprite.svg#edit-content")
+                                    use(href="../public/assets/svg/icon-sprite.svg#edit-content")
                                 svg
-                                  use(href="../assets/svg/icon-sprite.svg#trash1")
+                                  use(href="../public/assets/svg/icon-sprite.svg#trash1")
                           tr.product-removes
                             td
                               .form-check 
@@ -843,9 +843,9 @@ html(lang='en')
                               .product-action
                                 a(href="add-products.html") 
                                   svg     
-                                    use(href="../assets/svg/icon-sprite.svg#edit-content")
+                                    use(href="../public/assets/svg/icon-sprite.svg#edit-content")
                                 svg
-                                  use(href="../assets/svg/icon-sprite.svg#trash1")
+                                  use(href="../public/assets/svg/icon-sprite.svg#trash1")
                           tr.product-removes
                             td
                               .form-check 
@@ -876,9 +876,9 @@ html(lang='en')
                               .product-action
                                 a(href="add-products.html") 
                                   svg     
-                                    use(href="../assets/svg/icon-sprite.svg#edit-content")
+                                    use(href="../public/assets/svg/icon-sprite.svg#edit-content")
                                 svg
-                                  use(href="../assets/svg/icon-sprite.svg#trash1")
+                                  use(href="../public/assets/svg/icon-sprite.svg#trash1")
                           tr.product-removes
                             td
                               .form-check 
@@ -909,9 +909,9 @@ html(lang='en')
                               .product-action
                                 a(href="add-products.html") 
                                   svg     
-                                    use(href="../assets/svg/icon-sprite.svg#edit-content")
+                                    use(href="../public/assets/svg/icon-sprite.svg#edit-content")
                                 svg
-                                  use(href="../assets/svg/icon-sprite.svg#trash1")
+                                  use(href="../public/assets/svg/icon-sprite.svg#trash1")
                           tr.product-removes
                             td
                               .form-check 
@@ -942,9 +942,9 @@ html(lang='en')
                               .product-action
                                 a(href="add-products.html") 
                                   svg     
-                                    use(href="../assets/svg/icon-sprite.svg#edit-content")
+                                    use(href="../public/assets/svg/icon-sprite.svg#edit-content")
                                 svg
-                                  use(href="../assets/svg/icon-sprite.svg#trash1")
+                                  use(href="../public/assets/svg/icon-sprite.svg#trash1")
                           tr.product-removes
                             td
                               .form-check 
@@ -975,9 +975,9 @@ html(lang='en')
                               .product-action
                                 a(href="add-products.html") 
                                   svg     
-                                    use(href="../assets/svg/icon-sprite.svg#edit-content")
+                                    use(href="../public/assets/svg/icon-sprite.svg#edit-content")
                                 svg
-                                  use(href="../assets/svg/icon-sprite.svg#trash1")
+                                  use(href="../public/assets/svg/icon-sprite.svg#trash1")
           // Container-fluid Ends
         include ../../components/footer
     include ../../components/footer-files
