--- a/public/assets/pug/mixin/element-notification.pug
+++ b/public/assets/pug/mixin/element-notification.pug
@@ -52,4 +52,4 @@ mixin  notification(data)
                 span(class="f-w-500 f-light f-12")=item.appName 
             span(class="f-light f-w-500 f-12")=item.notificationTime 
             //- svg
-            //-   use(href="../assets/svg/icon-sprite.svg#more-vertical")
+            //-   use(href="../public/assets/svg/icon-sprite.svg#more-vertical")
